<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/bg_market">

            <RadioGroup
                android:id="@+id/market_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/chart_btn"
                    android:text="@string/chart"
                    style="@style/chart_top_btn_style"/>

                <RadioButton
                    android:id="@+id/order_btn"
                    android:text="@string/buy_sell_order"
                    style="@style/chart_top_btn_style"/>

                <RadioButton
                    android:id="@+id/newest_deal_btn"
                    android:text="@string/newest_deal"
                    style="@style/chart_top_btn_style"/>

            </RadioGroup>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1.0"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:src="@drawable/img_person_center"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</layout>

